# ESL-VOZ

./: .env.example  .gitignore  HANDOFF.md  MEMORY.md  Makefile  README.md  idea.json  resources_to_review.txt
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: db.py  main.py
backend/app/api/: auth.py  engine.py  instructor.py  lessons.py  onboarding.py  tutor.py
backend/app/core/: config.py
backend/app/data/: placement_bank.json
backend/app/models/: __init__.py  attempt.py  cohort.py  consent_grant.py  cost_event.py  lesson.py  lesson_step.py  magic_link_token.py  mastery_cell.py  recommendation_trace.py  student_profile.py  user.py  voice_turn_event.py
backend/app/services/: asr.py  auth.py  correction.py  cost_tracker.py  engine.py  lesson_ingest.py  lesson_lint.py  mastery.py  placement.py  tts.py  tutor.py
backend/scripts/: seed_lessons.py
backend/tests/: test_acceptance.py  test_auth.py  test_correction.py  test_engine.py  test_instructor_audit.py  test_strategy_api.py  test_strategy_unit.py  test_tutor_consent.py  test_tutor_subdialog.py  test_tutor_tts.py  test_voice_telemetry.py
data/: README.md  gaps.md
docs/: PRD.md  data_docs_timeback_com_beta.md  roadmap.md  setup-workflow.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: lint_lessons.py  lint_ui_strings.py  test_lint_ui_strings.py
(+60 files in other folders)
