[project]
name = "esl-voice-backend"
version = "0.1.0"
description = "ESL-voice backend — FastAPI + SQLModel"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyyaml>=6.0.2",
    "jsonschema>=4.23.0",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "resend>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
py-modules = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
